Add Dashboard Page

--- a/CentralBankPublicWebService/Views/Home/About.cshtml
+++ b/CentralBankPublicWebService/Views/Home/About.cshtml
@@ -1,7 +1,5 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<p>Use this area to provide additional information.</p>
+<h2>@ViewBag.Title</h2>
+<h3>Public Web Services is a project developed for the subject of integration af applications with open source and proprietary technology</h3>
